--- a/README.rdoc
+++ b/README.rdoc
@@ -37,7 +37,7 @@ Wanna see help? No problem.
     -ah, --additional-html           Specify, do additional HTML and CSS will be used (default - false)
     -m, --markup LANG                Specify markup language (markdown, textile or bbcode, default is markdown)
 
-So, there are four arguments:
+As you see, there are four arguments:
 * -i or --input which specifies input file. If it isn't typed, then first argument will be used as an input file. This argument is required.
 * -o or --output which specifies output file. You don't have to specify it, because ClothMark generates filename for output file automatically.
 * -m or --markup which specifies markup language. If you don't specify it, then Markdown will be used as a choosed language.
